[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {  version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
reqwest = "0.11.22"
futures = "0.3.29"